GIRAPH-997: Upgrade findbugs to 3.0.0 (dlogothetis via majakabiljo)